--- a/index.html
+++ b/index.html
@@ -72,21 +72,21 @@
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">Web Design</div>
-                        <p>You can contact me for website designing.</p>
+                        <p>You can <a href="mailto:contact.samir1s@gmail.com">contact me</a> for website designing.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
                         <div class="text">Advertising</div>
-                        <p>You can contact me to advertise about your any business.</p>
+                        <p>You can <a href="mailto:contact.samir1s@gmail.com">contact me</a> to advertise about your any business.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Apps Design</div>
-                        <p>You can contact me for any kind of app designing according to your desire.</p>
+                        <p>You can <a href="mailto:contact.samir1s@gmail.com">contact me</a> for any kind of app designing according to your desire.</p>
                     </div>
                 </div>
                </div>
@@ -101,7 +101,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>As a creative user of internet i have learnt HTML,CSS,JS,PHP and MY SQL. </p>
+                    <p>As a creative user of internet i have learnt HTML,CSS,JS,PHP and MY SQL. You can contact me if you want these types of websites through gmail. </p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
@@ -115,7 +115,7 @@
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
-                            <span>60%</span>
+                            <span>70%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
@@ -136,7 +136,7 @@
                     <div class="bars">
                         <div class="info">
                             <span>MySQL</span>
-                            <span>70%</span>
+                            <span>80%</span>
                         </div>
                         <div class="line mysql"></div>
                     </div>
@@ -223,7 +223,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="#">
+                    <form action="error contact through email">
                         <div class="fields">
                             <div class="field name">
                                 <input type="text" placeholder="Name" required>
@@ -249,7 +249,7 @@
 
    
     <footer>
-        <span>Created By <a href="https://www.codingnepalweb.com">CodingNepal</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span>Created By <a href="#">CodingNepal</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
