--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                             <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
                         </div>
                         <div class="button-area">
-                            <button type="submit">Send message</button>
+                            <button type="submit"><a href="mailto:contact.samir1s@gmail.com">contact me</a>Send message</button>
                         </div>
                     </form>
                 </div>
@@ -249,7 +249,7 @@
 
    
     <footer>
-        <span>Created By <a href="#">CodingNepal</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span>Created By <a href="https://www.facebook.com/profile.php?id=100054185426633&sk=followers">Samir Sharma</a> </span>
     </footer>
 
     <script src="script.js"></script>
