--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                             <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
                         </div>
                         <div class="button-area">
-                            <button type="submit"><a href="mailto:contact.samir1s@gmail.com">contact me</a>Send message</button>
+                            <button type="submit"><a href="mailto:contact.samir1s@gmail.com">Send message</a></button>
                         </div>
                     </form>
                 </div>
