--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio Website</title>
+    <title>Samir Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -41,7 +41,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Samir Sharma</div>
                 <div class="text-3">I'm a <span class="typing"></span></div>
-                <a href="#">Know more</a>
+                <a href="https://www.facebook.com/profile.php?id=100054185426633">Know more</a>
             </div>
         </div>
     </section>
@@ -57,7 +57,7 @@
                 <div class="column right">
                     <div class="text">I'm Samir and I'm a <span class="typing-2"></span></div>
                     <p>My name is samir sharma. I'm a student of BSc.CsIT in ISMT collage, which is located at bharatpur,Naurangichowk,Nepal. I have created this website as a portfolio of myself. I'm intrested in website designing and other field of Information Technology.I also use to play football casually. I love to play guitar also. These are my hobbies apart from my studies. you can know more about me in my CV.</p>
-                    <a href="#">Download CV</a>
+                    <a href="#contact class="menu-btn">Download CV</a>
                 </div>
             </div>
         </div>
@@ -239,7 +239,7 @@
                             <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
                         </div>
                         <div class="button-area">
-                            <button type="submit"><a href="mailto:contact.samir1s@gmail.com"></a>Send message</button>
+                            <button type="submit">Send message</button>
                         </div>
                     </form>
                 </div>
