--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="https://github.com/samir5188/3rd/blob/main/Images/Pukar.jpg?raw=true" alt="">
-                        <div class="text">Pukar Shrestha</div>
-                        <p>Software Developer</p>
+                        <img src="https://github.com/samir5188/Original/blob/main/Images/sharoz.jpg?raw=true" alt="">
+                        <div class="text">Saroj Chaudhary</div>
+                        <p>Business man </p><p>CEO of Computers</p>
                     </div>
                 </div>
             </div>
