--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Samir Portfolio Website</title>
+    <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -19,7 +19,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
+            <div class="logo"><a href="#">Samir<span> Sharma</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -41,7 +41,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Samir Sharma</div>
                 <div class="text-3">I'm a <span class="typing"></span></div>
-                <a href="https://www.facebook.com/profile.php?id=100054185426633">Know more</a>
+                <a href="#about">Know More</a>
             </div>
         </div>
     </section>
@@ -52,12 +52,12 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="https://github.com/samir5188/3rd/blob/main/Images/Snapchat-1301342616.jpg?raw=true" alt="">
+                    <img src="images/Snapchat-1301342616.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Samir and I'm a <span class="typing-2"></span></div>
                     <p>My name is samir sharma. I'm a student of BSc.CsIT in ISMT collage, which is located at bharatpur,Naurangichowk,Nepal. I have created this website as a portfolio of myself. I'm intrested in website designing and other field of Information Technology.I also use to play football casually. I love to play guitar also. These are my hobbies apart from my studies. you can know more about me in my CV.</p>
-                    <a href="#contact class="menu-btn">Download CV</a>
+                    <a href="#">Download CV</a>
                 </div>
             </div>
         </div>
@@ -101,7 +101,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>As a creative user of internet i have learnt HTML,CSS,JS,PHP and MY SQL. You can contact me if you want these types of websites through gmail. </p>
+                    <p>As a creative user of internet i have learnt HTML,CSS,JS,PHP and MY SQL. </p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
@@ -115,7 +115,7 @@
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
-                            <span>70%</span>
+                            <span>60%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
@@ -136,7 +136,7 @@
                     <div class="bars">
                         <div class="info">
                             <span>MySQL</span>
-                            <span>80%</span>
+                            <span>70%</span>
                         </div>
                         <div class="line mysql"></div>
                     </div>
@@ -152,37 +152,37 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="https://github.com/samir5188/3rd/blob/main/Images/Screenshot%202023-07-05%20101314.png?raw=true" alt="">
+                        <img src="images/Screenshot 2023-07-05 101314.png" alt="">
                         <div class="text">Nirjal Pokhrel</div>
                         <p>Black Hat Expert</p><p>CEO of Red Shady THC</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="https://github.com/samir5188/3rd/blob/main/Images/Ditik.jpg?raw=true" alt="">
+                        <img src="images/Ditik.jpg" alt="">
                         <div class="text">Ditik Rimal</div>
                         <p>Website Designer and Developer</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="https://github.com/samir5188/3rd/blob/main/Images/AAYUSH.jpg?raw=true" alt="">
+                        <img src="images/AAYUSH.jpg" alt="">
                         <div class="text">Aarush Khaniya</div>
                         <p>Website Designing Expert</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="https://github.com/samir5188/3rd/blob/main/Images/jeevan.jpg?raw=true" alt="">
-                        <div class="text">Jeevan Gauli</div>
-                        <p>Game developer</p>
+                        <img src="images/sharoz.jpg" alt="">
+                        <div class="text">Saroj Chaudhary</div>
+                        <p>Business man </p><p>CEO of Computers</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="https://github.com/samir5188/Original/blob/main/Images/sharoz.jpg?raw=true" alt="">
-                        <div class="text">Saroj Chaudhary</div>
-                        <p>Business man </p><p>CEO of Computers</p>
+                        <img src="images/Pukar.jpg" alt="">
+                        <div class="text">Pukar Shrestha</div>
+                        <p>Software Developer</p>
                     </div>
                 </div>
             </div>
@@ -223,20 +223,20 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="error contact through email">
+                    <form onsubmit="sendmail(); reset(); return false;" method="post">
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" placeholder="Name" required>
+                                <input type="text" id="name" placeholder="Name" required>
                             </div>
                             <div class="field email">
-                                <input type="email" placeholder="Email" required>
+                                <input type="email" id="email" placeholder="Email" required>
                             </div>
                         </div>
                         <div class="field">
-                            <input type="text" placeholder="Subject" required>
+                            <input type="text" id="subject" placeholder="Subject" required>
                         </div>
                         <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
+                            <textarea cols="30" rows="10" id="message" placeholder="Message.." required></textarea>
                         </div>
                         <div class="button-area">
                             <button type="submit">Send message</button>
@@ -247,11 +247,49 @@
         </div>
     </section>
 
-   
+    <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://www.facebook.com/profile.php?id=100054185426633&sk=followers">Samir Sharma</a> </span>
+        <span>Created By <a href="#">Samir Sharma</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <script>
+        function sendmail()
+        {
+            Email.send({
+                Host : "smtp.elasticemail.com",
+                Username : "chachaadam136@gmail.com",
+                Password : "5448B82F382ACE452F89213DB576F81FAD2A",
+                To : "contact.samir1s@gmail.com",
+                From : "chachaadam136@gmail.com",
+                Subject : "Website Enquiry Mail: "+document.getElementById("subject").value,
+    Body :'<div class="mailHeading" style="text-align: center;background-color: #5b5e5f71; height: 8vh;border-radius: 15px; padding-top: 16px;">  ' 
+  
++
+     
+  '<meta charset="UTF-8">'+
+  '<meta http-equiv="X-UA-Compatible" content="IE=edge">'+
+  '<meta name="viewport" content="width=device-width, initial-scale=1.0"> ' +
+    '<span  style="margin-top: 100%; font-size: 1.8em; text-transform: uppercase; border-left: 5px solid rgb(93, 128, 164); padding-top: 50%; padding: 0 10px 0 10px;'+
+    'color: black; letter-spacing: 5px; margin-bottom: 10px; font-weight: bold; padding-left: 15px;">Samir <text style="color: #5b869a;;">Sharma</text></span>'+
+ ' </div>'+
+  '<div class="mailContent" style="width:auto; height:auto; text-align: center; margin-top: -10px; color: black; background-color: rgba(126, 199, 199, 0.159);">   <p style="font-weight: 400; font-size: 21px;   color: black;'+
+  'text-align: left;">Dear <strong> Samir Sharma, </strong></p> '+
+    '<div class="mail" style="background-color: rgba(89, 131, 161, 0.479); color: black; height: 53vh; padding-top: 20px;">'+
+    '  <h3 style=" text-align: center;">Your message from the website is: <br><br><span style="background-color: rgba(44, 221, 28, 0.618);  '+
+       ' color: black; width:100%; height:100%;   font-size: 18px;"> '+document.getElementById("message").value +'</span> <br></h3>'+
+   
+    '<p  style="font-weight: 600;  bottom:0; font-size: 21px; text-align: left;">With Regards, <br>'+document.getElementById("name").value+'<br>'+ document.getElementById("email").value +
+        '</p> </div>'
+            }).then(
+            message => Swal.fire(
+                         'Success',
+                 'Message Sent Successfully', 'success')
+            );
+        }
+     </script>
 </body>
 </html>
