--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/Snapchat-1301342616.jpg" alt="">
+                    <img src="https://github.com/samir5188/Original/blob/main/Images/Snapchat-1301342616.jpg?raw=true" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Samir and I'm a <span class="typing-2"></span></div>
@@ -152,35 +152,35 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/Screenshot 2023-07-05 101314.png" alt="">
+                        <img src="https://github.com/samir5188/Original/blob/main/Images/Screenshot%202023-07-05%20101314.png?raw=true" alt="">
                         <div class="text">Nirjal Pokhrel</div>
                         <p>Black Hat Expert</p><p>CEO of Red Shady THC</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/Ditik.jpg" alt="">
+                        <img src="https://github.com/samir5188/Original/blob/main/Images/Ditik.jpg?raw=true" alt="">
                         <div class="text">Ditik Rimal</div>
                         <p>Website Designer and Developer</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/AAYUSH.jpg" alt="">
+                        <img src="https://github.com/samir5188/Original/blob/main/Images/AAYUSH.jpg?raw=true" alt="">
                         <div class="text">Aarush Khaniya</div>
                         <p>Website Designing Expert</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/sharoz.jpg" alt="">
+                        <img src="https://github.com/samir5188/Original/blob/main/Images/sharoz.jpg?raw=true" alt="">
                         <div class="text">Saroj Chaudhary</div>
                         <p>Business man </p><p>CEO of Computers</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/Pukar.jpg" alt="">
+                        <img src="https://github.com/samir5188/Original/blob/main/Images/Pukar.jpg?raw=true" alt="">
                         <div class="text">Pukar Shrestha</div>
                         <p>Software Developer</p>
                     </div>
