--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#services" class="menu-btn">Services</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
-                <li><a href="#teams" class="menu-btn">Teams</a></li>
+                <li><a href="#projects" class="menu-btn">Projects</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -47,17 +47,24 @@
     </section>
 
     <!-- about section start -->
+    <div id="blurOverlay"></div>
     <section class="about" id="about">
         <div class="max-width">
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="https://github.com/samir5188/Original/blob/main/Images/Snapchat-1301342616.jpg?raw=true" alt="">
+                    <!-- Image and Trackball -->
+                    <div class="imageContent">
+                        <div class="myImg">
+                            <img src="Images/samirsharmapp2.png" alt="Samir Sharma" />
+                        </div>
+                       <div class="imageElement"></div>
+                     
+                    </div>
                 </div>
                 <div class="column right">
                     <div class="text">I'm Samir and I'm a <span class="typing-2"></span></div>
-                    <p>My name is samir sharma. I'm a student of BSc.CsIT in ISMT collage, which is located at bharatpur,Naurangichowk,Nepal. I have created this website as a portfolio of myself. I'm intrested in website designing and other field of Information Technology.I also use to play football casually. I love to play guitar also. These are my hobbies apart from my studies. you can know more about me in my CV.</p>
-                    <a href="#">Download CV</a>
+                    <p>My name is samir sharma. I'm a student of BSc.CsIT in ISMT collage, which is located at bharatpur,Naurangichowk,Nepal. I have created this website as a portfolio of myself. I'm intrested in website designing and other field of Information Technology.I also use to play football casually. I love to play guitar also. These are my hobbies apart from my studies. you can know more about me in my CV.</p>                
                 </div>
             </div>
         </div>
@@ -72,21 +79,21 @@
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">Web Design</div>
-                        <p>You can <a href="mailto:contact.samir1s@gmail.com">contact me</a> for website designing.</p>
+                        <p>You can <a href="mailto:contact.samir1s@gmail.com"><B>contact me</B></a> for website designing.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
                         <div class="text">Advertising</div>
-                        <p>You can <a href="mailto:contact.samir1s@gmail.com">contact me</a> to advertise about your any business.</p>
+                        <p>You can <a href="mailto:contact.samir1s@gmail.com"><B>contact me</B></a> to advertise about your any business.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Apps Design</div>
-                        <p>You can <a href="mailto:contact.samir1s@gmail.com">contact me</a> for any kind of app designing according to your desire.</p>
+                        <p>You can <a href="mailto:contact.samir1s@gmail.com"></dB>contact me</B></a> for any kind of app designing according to your desire.</p>
                     </div>
                 </div>
                </div>
@@ -102,41 +109,56 @@
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
                     <p>As a creative user of internet i have learnt HTML,CSS,JS,PHP and MY SQL. </p>
-                    <a href="#">Read more</a>
+                    <a href="#">Download CV</a>
                 </div>
                 <div class="column right">
                     <div class="bars">
                         <div class="info">
                             <span>HTML</span>
-                            <span>90%</span>
+                            <div>
+                                <span>Beginner</span>
+                                <a href="path/to/html_image.jpg" target="_blank" class="view-button"><i class="fas fa-eye"></i> </a>
+                            </div>
                         </div>
                         <div class="line html"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
-                            <span>60%</span>
+                            <div>
+                              <span>Beginner</span>
+                              <a href="Images/UdemyCSScertificate.jpg" target="_blank" class="view-button"><i class="fas fa-eye"></i> </a>
+                            </div>
                         </div>
                         <div class="line css"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>JavaScript</span>
-                            <span>80%</span>
+                            <div>
+                                <span>Beginner</span>
+                                <a href="Images/UdemyJsphp.png" target="_blank" class="view-button"><i class="fas fa-eye"></i></a>
+                            </div>
                         </div>
                         <div class="line js"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>PHP</span>
-                            <span>50%</span>
+                            <div>
+                                <span>Beginner</span>
+                                <a href="Images/UdemyJsphp.png" target="_blank" class="view-button"><i class="fas fa-eye"></i> </a>
+                            </div>
                         </div>
                         <div class="line php"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>MySQL</span>
-                            <span>70%</span>
+                            <div>
+                                <span>Beginner</span>
+                                <a href="Images/darjeeling.jpg" target="_blank" class="view-button"><i class="fas fa-eye"></i> </a>
+                            </div>
                         </div>
                         <div class="line mysql"></div>
                     </div>
@@ -145,44 +167,40 @@
         </div>
     </section>
 
-    <!-- teams section start -->
-    <section class="teams" id="teams">
+    <!-- projects section start -->
+    <section class="teams" id="projects">
         <div class="max-width">
-            <h2 class="title">My teams</h2>
+            <h2 class="title">My Projects</h2>
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="https://github.com/samir5188/Original/blob/main/Images/Screenshot%202023-07-05%20101314.png?raw=true" alt="">
-                        <div class="text">Nirjal Pokhrel</div>
-                        <p>Black Hat Expert</p><p>CEO of Red Shady THC</p>
+                        <img src="Images/darjeeling.jpg" alt="">
+                        <div class="text">Basanta's Portfolio</div>
+                        <div class="buttons">
+                            <a href="https://www.basantagautam.com.np" target="_blank" class="btn view-portfolio"><i class="fas fa-eye"></i>  </a>
+                            <a href="https://github.com/basanteygautam/portfolio-website" target="_blank" class="btn github-btn"><i class="fab fa-github"></i></a>
+                        </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="https://github.com/samir5188/Original/blob/main/Images/Ditik.jpg?raw=true" alt="">
-                        <div class="text">Ditik Rimal</div>
-                        <p>Website Designer and Developer</p>
+                        <img src="Images/Suraj's portfolio.png" alt="">
+                        <div class="text">Suraj's Portfolio</div>
+                        <div class="buttons">
+                            <a href="https://www.surendragautam11.com.np" target="_blank" class="btn view-portfolio"><i class="fas fa-eye"></i>  </a>
+                            <a href="https://github.com/surendragtm/surendragautam12" target="_blank" class="btn github-btn"><i class="fab fa-github"></i></a>
+                        </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="https://github.com/samir5188/Original/blob/main/Images/AAYUSH.jpg?raw=true" alt="">
-                        <div class="text">Aarush Khaniya</div>
-                        <p>Website Designing Expert</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="https://github.com/samir5188/Original/blob/main/Images/sharoz.jpg?raw=true" alt="">
-                        <div class="text">Saroj Chaudhary</div>
-                        <p>Business man </p><p>CEO of Computers</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="https://github.com/samir5188/Original/blob/main/Images/Pukar.jpg?raw=true" alt="">
-                        <div class="text">Pukar Shrestha</div>
-                        <p>Software Developer</p>
+                        <img src="Images/darjeeling.jpg" alt="">
+                        <div class="text">Sanjit's Portfolio
+                           <div class="buttons">
+                              <a href="https://www.sanjitrijal5.com.np" target="_blank" class="btn view-portfolio"><i class="fas fa-eye"></i> </a>
+                              <a href="#" target="_blank"  class="btn github-btn"><i class="fab fa-github"></i></a>
+                           </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -210,6 +228,13 @@
                             <div class="info">
                                 <div class="head">Address</div>
                                 <div class="sub-title">Chitwan, Nepal</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-phone"></i>
+                            <div class="info">
+                                <div class="head">Phone</div>
+                                <div class="sub-title">+977 9865252815</div>
                             </div>
                         </div>
                         <div class="row">
