--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <!-- Image and Trackball -->
                     <div class="imageContent">
                         <div class="myImg">
-                            <img src="Images/samirsharmapp2.png" alt="Samir Sharma" />
+                            <img src="https://github.com/samir5188/Original/blob/main/Images/samirsharmapp2.png?raw=true" alt="Samir Sharma" />
                         </div>
                        <div class="imageElement"></div>
                      
@@ -117,7 +117,7 @@
                             <span>HTML</span>
                             <div>
                                 <span>Beginner</span>
-                                <a href="path/to/html_image.jpg" target="_blank" class="view-button"><i class="fas fa-eye"></i> </a>
+                                <a href="https://github.com/samir5188/Original/blob/main/Images/darjeeling.jpg?raw=true"><i class="fas fa-eye"></i> </a>
                             </div>
                         </div>
                         <div class="line html"></div>
@@ -127,7 +127,7 @@
                             <span>CSS</span>
                             <div>
                               <span>Beginner</span>
-                              <a href="Images/UdemyCSScertificate.jpg" target="_blank" class="view-button"><i class="fas fa-eye"></i> </a>
+                              <a href="https://github.com/samir5188/Original/blob/main/Images/UdemyCSScertificate.jpg?raw=true" target="_blank" class="view-button"><i class="fas fa-eye"></i> </a>
                             </div>
                         </div>
                         <div class="line css"></div>
@@ -137,7 +137,7 @@
                             <span>JavaScript</span>
                             <div>
                                 <span>Beginner</span>
-                                <a href="Images/UdemyJsphp.png" target="_blank" class="view-button"><i class="fas fa-eye"></i></a>
+                                <a href="https://github.com/samir5188/Original/blob/main/Images/UdemyJsphp.png?raw=true" target="_blank" class="view-button"><i class="fas fa-eye"></i></a>
                             </div>
                         </div>
                         <div class="line js"></div>
@@ -147,7 +147,7 @@
                             <span>PHP</span>
                             <div>
                                 <span>Beginner</span>
-                                <a href="Images/UdemyJsphp.png" target="_blank" class="view-button"><i class="fas fa-eye"></i> </a>
+                                <a href="https://github.com/samir5188/Original/blob/main/Images/UdemyJsphp.png?raw=true" target="_blank" class="view-button"><i class="fas fa-eye"></i> </a>
                             </div>
                         </div>
                         <div class="line php"></div>
@@ -157,7 +157,7 @@
                             <span>MySQL</span>
                             <div>
                                 <span>Beginner</span>
-                                <a href="Images/darjeeling.jpg" target="_blank" class="view-button"><i class="fas fa-eye"></i> </a>
+                                <a href="https://github.com/samir5188/Original/blob/main/Images/darjeeling.jpg?raw=true" target="_blank" class="view-button"><i class="fas fa-eye"></i> </a>
                             </div>
                         </div>
                         <div class="line mysql"></div>
@@ -174,7 +174,7 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="Images/darjeeling.jpg" alt="">
+                        <img src="https://github.com/samir5188/Original/blob/main/Images/Screenshot%202024-02-24%20122046.png?raw=true" alt="">
                         <div class="text">Basanta's Portfolio</div>
                         <div class="buttons">
                             <a href="https://www.basantagautam.com.np" target="_blank" class="btn view-portfolio"><i class="fas fa-eye"></i>  </a>
@@ -184,7 +184,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="Images/Suraj's portfolio.png" alt="">
+                        <img src="https://github.com/samir5188/Original/blob/main/Images/Suraj's%20portfolio.png?raw=true" alt="">
                         <div class="text">Suraj's Portfolio</div>
                         <div class="buttons">
                             <a href="https://www.surendragautam11.com.np" target="_blank" class="btn view-portfolio"><i class="fas fa-eye"></i>  </a>
@@ -194,7 +194,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="Images/darjeeling.jpg" alt="">
+                        <img src="https://github.com/samir5188/Original/blob/main/Images/darjeeling.jpg?raw=true" alt="">
                         <div class="text">Sanjit's Portfolio
                            <div class="buttons">
                               <a href="https://www.sanjitrijal5.com.np" target="_blank" class="btn view-portfolio"><i class="fas fa-eye"></i> </a>
