--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <span>HTML</span>
                             <div>
                                 <span>Beginner</span>
-                                <a href="https://github.com/samir5188/Original/blob/main/Images/darjeeling.jpg?raw=true"><i class="fas fa-eye"></i> </a>
+                                <a href="https://github.com/samir5188/Original/blob/main/Images/darjeeling.jpg?raw=true" target="_blank" class="view-button"><i class="fas fa-eye"></i> </a>
                             </div>
                         </div>
                         <div class="line html"></div>
