--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">Web Design</div>
-                        <p>You can <a href="mailto:contact.samir1s@gmail.com"><B>contact me</B></a> for website designing.</p>
+                        <p>You can <a href="mailto:contact.samir1s@gmail.com"><B>contact me</B></a> for any types of websites designing.</p>
                     </div>
                 </div>
                 <div class="card">
@@ -93,7 +93,7 @@
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Apps Design</div>
-                        <p>You can <a href="mailto:contact.samir1s@gmail.com"></dB>contact me</B></a> for any kind of app designing according to your desire.</p>
+                        <p>You can <a href="mailto:contact.samir1s@gmail.com"><B>contact me</B></a> for any kind of app designing according to your desire.</p>
                     </div>
                 </div>
                </div>
