--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Apps Design</div>
-                        <p>You can <a href="mailto:contact.samir1s@gmail.com"><B>contact me</B></a> for any kind of app designing according to your desire.</p>
+                        <p>You can <a href="mailto:contact.samir1s@gmail.com"><B>contact me</B></a> for any kind of app</p> <p>designing according to your desire.</p>
                     </div>
                 </div>
                </div>
